Bump to v5 snapshot, optimized dependencies, some refactoring/renaming, logging changes, etc.