@@ -5,7 +5,7 @@ echo your JAVA_HOME=$JAVA_HOME
 $JAVA_HOME/bin/java -version
 echo Running The BioPAX Validator Web Server...
 
-VALIDATOR_OPTS="-Xmx2g -Dfile.encoding=UTF-8 -Dpaxtools.CollectionProvider=org.biopax.paxtools.trove.TProvider"
+VALIDATOR_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED -Xmx2g -Dfile.encoding=UTF-8 -Dpaxtools.CollectionProvider=org.biopax.paxtools.trove.TProvider"
 
 # if you have a Google Analytics account and want to track this app visits,
 # add your code using the JVM option: -Dbiopax.validator.ga.code="UA-XXXX-Y"
